admin/style.css: Fixed #panel z-index.

--- a/Resources/public/admin/css/style.css
+++ b/Resources/public/admin/css/style.css
@@ -447,7 +447,7 @@ form fieldset:first-of-type legend {
 	margin-left: 0px;
 	position: fixed;
 	padding: 0;
-	z-index: 2000;
+	z-index: 1020;
 }
 #panel > div {
 	padding: 0 10px 0 10px;
